# darkicewolf50Cloud

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml  dockerfile
.cargo/: config.toml
.forgejo/Workflows/: Action.yml
.forgejo/workflows/: action.yaml  action.yml
.gitea/workflows/: Actions.yml
.github/workflows/: Actions.yml
blogs/: test.md
data_txt/: projects.yaml  skill_level.yaml  test.md
data_txt/blogs/: test copy 3.md  test copy.md  test.md
database/: experience.yaml  projects.yaml  skill_level.yaml  test.md
database/blogs/: test copy 2.md
src/: lib.rs  main.rs  swagger_docs.rs
src/data_txt/: skill_level.yaml
static/: robots.txt
