[package]
name = "darkicewolf50_cloud"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
comrak = "0.46.0"
time = { version = "0.3.44", features = ["serde"] }
actix-cors = "0.7.1"
serde_yaml_bw = "2.4.1"
darkicewolf50-actix-setup = { version = "0.1.3", git = "https://forge.ucalgarybaja.ca/darkicewolf50/darkicewolf50-actix-setup.git" }

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
